parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PTCOMA
    REVALUAR

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> instruccion instrucciones
Rule 2     instrucciones -> instruccion
Rule 3     instruccion -> CORIZQ expresion CORDER
Rule 4     expresion -> expresion MAS expresion
Rule 5     expresion -> expresion MENOS expresion
Rule 6     expresion -> expresion POR expresion
Rule 7     expresion -> expresion DIV expresion
Rule 8     expresion -> expresion AND expresion
Rule 9     expresion -> expresion OR expresion
Rule 10    expresion -> MENOS expresion
Rule 11    expresion -> NOT expresion
Rule 12    expresion -> PARIZQ expresion PARDER
Rule 13    expresion -> ENTERO
Rule 14    expresion -> DECIMAL
Rule 15    expresion -> CADENA

Terminals, with rules where they appear

AND                  : 8
CADENA               : 15
CORDER               : 3
CORIZQ               : 3
DECIMAL              : 14
DIV                  : 7
ENTERO               : 13
MAS                  : 4
MENOS                : 5 10
NOT                  : 11
OR                   : 9
PARDER               : 12
PARIZQ               : 12
POR                  : 6
PTCOMA               : 
REVALUAR             : 
error                : 

Nonterminals, with rules where they appear

expresion            : 3 4 4 5 5 6 6 7 7 8 8 9 9 10 11 12
instruccion          : 1 2
instrucciones        : 1 0

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . instruccion instrucciones
    (2) instrucciones -> . instruccion
    (3) instruccion -> . CORIZQ expresion CORDER

    CORIZQ          shift and go to state 3

    instrucciones                  shift and go to state 1
    instruccion                    shift and go to state 2

state 1

    (0) S' -> instrucciones .



state 2

    (1) instrucciones -> instruccion . instrucciones
    (2) instrucciones -> instruccion .
    (1) instrucciones -> . instruccion instrucciones
    (2) instrucciones -> . instruccion
    (3) instruccion -> . CORIZQ expresion CORDER

    $end            reduce using rule 2 (instrucciones -> instruccion .)
    CORIZQ          shift and go to state 3

    instruccion                    shift and go to state 2
    instrucciones                  shift and go to state 4

state 3

    (3) instruccion -> CORIZQ . expresion CORDER
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 5

state 4

    (1) instrucciones -> instruccion instrucciones .

    $end            reduce using rule 1 (instrucciones -> instruccion instrucciones .)


state 5

    (3) instruccion -> CORIZQ expresion . CORDER
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    CORDER          shift and go to state 12
    MAS             shift and go to state 13
    MENOS           shift and go to state 14
    POR             shift and go to state 15
    DIV             shift and go to state 16
    AND             shift and go to state 17
    OR              shift and go to state 18


state 6

    (10) expresion -> MENOS . expresion
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 19

state 7

    (11) expresion -> NOT . expresion
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 20

state 8

    (12) expresion -> PARIZQ . expresion PARDER
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 21

state 9

    (13) expresion -> ENTERO .

    CORDER          reduce using rule 13 (expresion -> ENTERO .)
    MAS             reduce using rule 13 (expresion -> ENTERO .)
    MENOS           reduce using rule 13 (expresion -> ENTERO .)
    POR             reduce using rule 13 (expresion -> ENTERO .)
    DIV             reduce using rule 13 (expresion -> ENTERO .)
    AND             reduce using rule 13 (expresion -> ENTERO .)
    OR              reduce using rule 13 (expresion -> ENTERO .)
    PARDER          reduce using rule 13 (expresion -> ENTERO .)


state 10

    (14) expresion -> DECIMAL .

    CORDER          reduce using rule 14 (expresion -> DECIMAL .)
    MAS             reduce using rule 14 (expresion -> DECIMAL .)
    MENOS           reduce using rule 14 (expresion -> DECIMAL .)
    POR             reduce using rule 14 (expresion -> DECIMAL .)
    DIV             reduce using rule 14 (expresion -> DECIMAL .)
    AND             reduce using rule 14 (expresion -> DECIMAL .)
    OR              reduce using rule 14 (expresion -> DECIMAL .)
    PARDER          reduce using rule 14 (expresion -> DECIMAL .)


state 11

    (15) expresion -> CADENA .

    CORDER          reduce using rule 15 (expresion -> CADENA .)
    MAS             reduce using rule 15 (expresion -> CADENA .)
    MENOS           reduce using rule 15 (expresion -> CADENA .)
    POR             reduce using rule 15 (expresion -> CADENA .)
    DIV             reduce using rule 15 (expresion -> CADENA .)
    AND             reduce using rule 15 (expresion -> CADENA .)
    OR              reduce using rule 15 (expresion -> CADENA .)
    PARDER          reduce using rule 15 (expresion -> CADENA .)


state 12

    (3) instruccion -> CORIZQ expresion CORDER .

    CORIZQ          reduce using rule 3 (instruccion -> CORIZQ expresion CORDER .)
    $end            reduce using rule 3 (instruccion -> CORIZQ expresion CORDER .)


state 13

    (4) expresion -> expresion MAS . expresion
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 22

state 14

    (5) expresion -> expresion MENOS . expresion
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 23

state 15

    (6) expresion -> expresion POR . expresion
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 24

state 16

    (7) expresion -> expresion DIV . expresion
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 25

state 17

    (8) expresion -> expresion AND . expresion
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 26

state 18

    (9) expresion -> expresion OR . expresion
    (4) expresion -> . expresion MAS expresion
    (5) expresion -> . expresion MENOS expresion
    (6) expresion -> . expresion POR expresion
    (7) expresion -> . expresion DIV expresion
    (8) expresion -> . expresion AND expresion
    (9) expresion -> . expresion OR expresion
    (10) expresion -> . MENOS expresion
    (11) expresion -> . NOT expresion
    (12) expresion -> . PARIZQ expresion PARDER
    (13) expresion -> . ENTERO
    (14) expresion -> . DECIMAL
    (15) expresion -> . CADENA

    MENOS           shift and go to state 6
    NOT             shift and go to state 7
    PARIZQ          shift and go to state 8
    ENTERO          shift and go to state 9
    DECIMAL         shift and go to state 10
    CADENA          shift and go to state 11

    expresion                      shift and go to state 27

state 19

    (10) expresion -> MENOS expresion .
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    CORDER          reduce using rule 10 (expresion -> MENOS expresion .)
    MAS             reduce using rule 10 (expresion -> MENOS expresion .)
    MENOS           reduce using rule 10 (expresion -> MENOS expresion .)
    POR             reduce using rule 10 (expresion -> MENOS expresion .)
    DIV             reduce using rule 10 (expresion -> MENOS expresion .)
    AND             reduce using rule 10 (expresion -> MENOS expresion .)
    OR              reduce using rule 10 (expresion -> MENOS expresion .)
    PARDER          reduce using rule 10 (expresion -> MENOS expresion .)

  ! MAS             [ shift and go to state 13 ]
  ! MENOS           [ shift and go to state 14 ]
  ! POR             [ shift and go to state 15 ]
  ! DIV             [ shift and go to state 16 ]
  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 18 ]


state 20

    (11) expresion -> NOT expresion .
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    CORDER          reduce using rule 11 (expresion -> NOT expresion .)
    MAS             reduce using rule 11 (expresion -> NOT expresion .)
    MENOS           reduce using rule 11 (expresion -> NOT expresion .)
    POR             reduce using rule 11 (expresion -> NOT expresion .)
    DIV             reduce using rule 11 (expresion -> NOT expresion .)
    AND             reduce using rule 11 (expresion -> NOT expresion .)
    OR              reduce using rule 11 (expresion -> NOT expresion .)
    PARDER          reduce using rule 11 (expresion -> NOT expresion .)

  ! MAS             [ shift and go to state 13 ]
  ! MENOS           [ shift and go to state 14 ]
  ! POR             [ shift and go to state 15 ]
  ! DIV             [ shift and go to state 16 ]
  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 18 ]


state 21

    (12) expresion -> PARIZQ expresion . PARDER
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    PARDER          shift and go to state 28
    MAS             shift and go to state 13
    MENOS           shift and go to state 14
    POR             shift and go to state 15
    DIV             shift and go to state 16
    AND             shift and go to state 17
    OR              shift and go to state 18


state 22

    (4) expresion -> expresion MAS expresion .
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    CORDER          reduce using rule 4 (expresion -> expresion MAS expresion .)
    MAS             reduce using rule 4 (expresion -> expresion MAS expresion .)
    MENOS           reduce using rule 4 (expresion -> expresion MAS expresion .)
    AND             reduce using rule 4 (expresion -> expresion MAS expresion .)
    OR              reduce using rule 4 (expresion -> expresion MAS expresion .)
    PARDER          reduce using rule 4 (expresion -> expresion MAS expresion .)
    POR             shift and go to state 15
    DIV             shift and go to state 16

  ! POR             [ reduce using rule 4 (expresion -> expresion MAS expresion .) ]
  ! DIV             [ reduce using rule 4 (expresion -> expresion MAS expresion .) ]
  ! MAS             [ shift and go to state 13 ]
  ! MENOS           [ shift and go to state 14 ]
  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 18 ]


state 23

    (5) expresion -> expresion MENOS expresion .
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    CORDER          reduce using rule 5 (expresion -> expresion MENOS expresion .)
    MAS             reduce using rule 5 (expresion -> expresion MENOS expresion .)
    MENOS           reduce using rule 5 (expresion -> expresion MENOS expresion .)
    AND             reduce using rule 5 (expresion -> expresion MENOS expresion .)
    OR              reduce using rule 5 (expresion -> expresion MENOS expresion .)
    PARDER          reduce using rule 5 (expresion -> expresion MENOS expresion .)
    POR             shift and go to state 15
    DIV             shift and go to state 16

  ! POR             [ reduce using rule 5 (expresion -> expresion MENOS expresion .) ]
  ! DIV             [ reduce using rule 5 (expresion -> expresion MENOS expresion .) ]
  ! MAS             [ shift and go to state 13 ]
  ! MENOS           [ shift and go to state 14 ]
  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 18 ]


state 24

    (6) expresion -> expresion POR expresion .
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    CORDER          reduce using rule 6 (expresion -> expresion POR expresion .)
    MAS             reduce using rule 6 (expresion -> expresion POR expresion .)
    MENOS           reduce using rule 6 (expresion -> expresion POR expresion .)
    POR             reduce using rule 6 (expresion -> expresion POR expresion .)
    DIV             reduce using rule 6 (expresion -> expresion POR expresion .)
    AND             reduce using rule 6 (expresion -> expresion POR expresion .)
    OR              reduce using rule 6 (expresion -> expresion POR expresion .)
    PARDER          reduce using rule 6 (expresion -> expresion POR expresion .)

  ! MAS             [ shift and go to state 13 ]
  ! MENOS           [ shift and go to state 14 ]
  ! POR             [ shift and go to state 15 ]
  ! DIV             [ shift and go to state 16 ]
  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 18 ]


state 25

    (7) expresion -> expresion DIV expresion .
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    CORDER          reduce using rule 7 (expresion -> expresion DIV expresion .)
    MAS             reduce using rule 7 (expresion -> expresion DIV expresion .)
    MENOS           reduce using rule 7 (expresion -> expresion DIV expresion .)
    POR             reduce using rule 7 (expresion -> expresion DIV expresion .)
    DIV             reduce using rule 7 (expresion -> expresion DIV expresion .)
    AND             reduce using rule 7 (expresion -> expresion DIV expresion .)
    OR              reduce using rule 7 (expresion -> expresion DIV expresion .)
    PARDER          reduce using rule 7 (expresion -> expresion DIV expresion .)

  ! MAS             [ shift and go to state 13 ]
  ! MENOS           [ shift and go to state 14 ]
  ! POR             [ shift and go to state 15 ]
  ! DIV             [ shift and go to state 16 ]
  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 18 ]


state 26

    (8) expresion -> expresion AND expresion .
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    CORDER          reduce using rule 8 (expresion -> expresion AND expresion .)
    AND             reduce using rule 8 (expresion -> expresion AND expresion .)
    OR              reduce using rule 8 (expresion -> expresion AND expresion .)
    PARDER          reduce using rule 8 (expresion -> expresion AND expresion .)
    MAS             shift and go to state 13
    MENOS           shift and go to state 14
    POR             shift and go to state 15
    DIV             shift and go to state 16

  ! MAS             [ reduce using rule 8 (expresion -> expresion AND expresion .) ]
  ! MENOS           [ reduce using rule 8 (expresion -> expresion AND expresion .) ]
  ! POR             [ reduce using rule 8 (expresion -> expresion AND expresion .) ]
  ! DIV             [ reduce using rule 8 (expresion -> expresion AND expresion .) ]
  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 18 ]


state 27

    (9) expresion -> expresion OR expresion .
    (4) expresion -> expresion . MAS expresion
    (5) expresion -> expresion . MENOS expresion
    (6) expresion -> expresion . POR expresion
    (7) expresion -> expresion . DIV expresion
    (8) expresion -> expresion . AND expresion
    (9) expresion -> expresion . OR expresion

    CORDER          reduce using rule 9 (expresion -> expresion OR expresion .)
    AND             reduce using rule 9 (expresion -> expresion OR expresion .)
    OR              reduce using rule 9 (expresion -> expresion OR expresion .)
    PARDER          reduce using rule 9 (expresion -> expresion OR expresion .)
    MAS             shift and go to state 13
    MENOS           shift and go to state 14
    POR             shift and go to state 15
    DIV             shift and go to state 16

  ! MAS             [ reduce using rule 9 (expresion -> expresion OR expresion .) ]
  ! MENOS           [ reduce using rule 9 (expresion -> expresion OR expresion .) ]
  ! POR             [ reduce using rule 9 (expresion -> expresion OR expresion .) ]
  ! DIV             [ reduce using rule 9 (expresion -> expresion OR expresion .) ]
  ! AND             [ shift and go to state 17 ]
  ! OR              [ shift and go to state 18 ]


state 28

    (12) expresion -> PARIZQ expresion PARDER .

    CORDER          reduce using rule 12 (expresion -> PARIZQ expresion PARDER .)
    MAS             reduce using rule 12 (expresion -> PARIZQ expresion PARDER .)
    MENOS           reduce using rule 12 (expresion -> PARIZQ expresion PARDER .)
    POR             reduce using rule 12 (expresion -> PARIZQ expresion PARDER .)
    DIV             reduce using rule 12 (expresion -> PARIZQ expresion PARDER .)
    AND             reduce using rule 12 (expresion -> PARIZQ expresion PARDER .)
    OR              reduce using rule 12 (expresion -> PARIZQ expresion PARDER .)
    PARDER          reduce using rule 12 (expresion -> PARIZQ expresion PARDER .)

